feat&test: 검색 시 공개 문제집만 조회되도록 조건 추가